Sat Jul 20 15:42:43 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makeconf (lndist): Find DISTFILES in $(srcdir).
	* Makefile (date): Delete vare.
	(version, dirname): New vars.
	(dist): Operate in $(srcdir).  Use $(dirname) for the tar dir name.
	(hurd-snap): Create in $(srcdir).

Thu Jul 18 00:40:04 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makeconf (install): Depend on $(includedir)/$(installhdrsubdir).
	(install-headers): Likewise.
	($(includedir)/$(installhdrsubdir)): New rule.
	
	* Makeconf (vpath -l%): Tell make where to find -l libraries.

Wed Jul 17 22:49:50 1996  Roland McGrath  <roland@baalperazim.frob.com>

	* build.mkcf.in: Use top_srcdir instead of srcdir.

Wed Jul 17 14:28:29 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makeconf: gs/install-hdrs/install-headers/g
	* Makefile: Likewise.

Tue Jul 16 11:35:48 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makeconf (CFLAGS): Define EWOULDBLOCK here to work around new
 	libc bug.

Sat Jul 13 20:34:41 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (other-subdirs): Add `include'.
	* Makeconf (install-hdrs) [library]: Depend on installed copies of
 	headers.
	(install-hdrs): Provide default target.
	* Makefile (%-install-hdrs, install-hdrs): New targets.
	* INSTALL: Discourage cross-building; include instructions for
	libc/hurd co-installation.
	* README: Discourage cross-building.

	* Makefile (install): Install $(other-subdirs) too.

Fri Jul 12 14:18:37 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makeconf (install) [doinst==one || doinst==many]: Include
 	file-specific options in call to INSTALL_PROGRAM.

Mon Jul  8 00:54:56 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (DIST_FILES): Removed *.h.

	* Makefile (DIST_FILES): Removed INSTALL-binary; now in
 	./release/.
	(other-subdirs): Add `release'.
	* release: New directory.

	* Makeconf: disable excessive cleverness for now...
