@@ -1,3 +1,8 @@
+Tue Jul 30 12:05:54 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* INSTALL-binary: Don't make stupid claims about avoiding use of
+	cylinder zero.
+
 Mon Jul 29 14:47:53 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
 
 	* checklist: Add cc to the list of symlinks to check.
